# roast-roulette

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Justfile  LICENSE  README.md  alembic.ini  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  manage.py  pyproject.toml  start
app/: config.py  crud.py  deps.py  fasthtml.py  lifespan.py  main.py  models.py  notifications.py  routes.py  tortoise_lifecycle.py
app/alembic/: env.py
app/alembic/versions/: 000001_auto.py  000002_add_postgresql_listen_notify_triggers_.py  000003_rename_is_connected_to_is_active_in_.py  000004_auto.py  000005_add_activity_changed_at_to_.py
app/services/: ai.py
app/static/: manifest.json
app/static/css/: fonts.css  input.css  output.min.css
app/static/js/: sse-preserve.js
app/templates/: base.html  base_dialog.html  game.html  index.html  player_form_dialog.html
app/templates/partials/: _lobby.html  _notifications.html  _player_list_in_game.html  _stage_1_upload_photo.html  _stage_2_wait_for_roulette.html  _stage_3_vote_roasts.html  _stage_4_show_best_roasts.html  _stage_5_show_roast_poem.html  _stage_header.html
compose/django/: Dockerfile  start
config/: asgi.py  finders.py  middleware.py  routing.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
main/games/: consumers.py  converters.py  enums.py  middleware.py  models.py  prompts.py  routing.py  services.py  urls.py  utils.py  views.py
main/games/migrations/: 0001_initial.py  0002_remove_roast_is_approved_roast_is_selected_and_more.py  0003_alter_roast_round.py
main/games/services/: crud.py  game_flow.py  generation.py
main/static/: manifest.json
main/static/css/: input.css  output.css
main/static/js/: qr-code.js
main/templates/: base.jinja  index.jinja
main/templates/games/: game_detail.jinja  game_form.jinja
main/templates/games/partials/: _countdown_timer.jinja  _lobby.jinja  _master_roast_detail.jinja  _modify_roast_text.jinja  _music_button.jinja  _photo_upload_form.jinja  _player_list_in_game.jinja  _roast_selection_form.jinja  _roast_target_roulette.jinja  _round_state_1_upload_photo.jinja  _round_state_2_choose_roast_target.jinja  _round_state_3_vote_roast_ideas.jinja  _round_state_4_show_most_voted_ideas.jinja  _round_state_5_show_roast_poem.jinja  _show_target.jinja  _stage_1_upload_photo.jinja  _stage_2_wait_for_roulette.jinja  _stage_3_vote_roasts.jinja  _stage_4_show_best_roasts.jinja  _stage_5_show_roast_poem.jinja  _stage_header.jinja  _submit_photos.jinja  _submit_roasts.jinja
