# Project
# --------------------------------
[project]
name = "roast-roulette"
version = "0.1.0"
description = "A multiplayer party game where LLMs roast the players."
authors = [
    {name = "Christian Tanul", email = "contact@christiantanul.com"}
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    # FastAPI stack
    "fastapi[standard]==0.118.0",            # https://github.com/tiangolo/fastapi
    "sse-starlette==3.0.2",                  # https://github.com/sysid/sse-starlette
    "python-multipart==0.0.20",              # https://github.com/andrew-d/python-multipart

    "fastapi-debug-toolbar==0.6.3",          # https://github.com/mongkok/fastapi-debug-toolbar

    # Database
    "tortoise-orm[asyncpg]==0.25.1",         # https://github.com/tortoise/tortoise-orm
    "aerich[toml]==0.9.1",                   # https://github.com/tortoise/aerich

    # Messaging
    "nats-py==2.10.0",                        # https://github.com/nats-io/nats.py

    # Settings
    "pydantic-settings==2.11.0",               # https://github.com/pydantic/pydantic-settings

    # Utilities
    "itsdangerous==2.2.0",                    # https://github.com/pallets/itsdangerous

    # External APIs
    "openai==2.0.1",                         # https://github.com/openai/openai-python
]

[tool.uv.sources]
tortoise-orm = { git = "https://github.com/scriptogre/tortoise-orm", branch = "develop" }
fastapi-debug-toolbar = { git = "https://github.com/scriptogre/fastapi-debug-toolbar", branch = "main" }

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./app/migrations"
src_folder = "./."
